CAMEL-10141: make camel-spring-ws tests pass on Java 9