@@ -178,4 +178,66 @@
 
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--patch-module java.xml.bind=${project.basedir}/target/java9/stax-ex-1.7.8.jar  --patch-module java.xml.ws=${project.basedir}/target/java9/saaj-impl-1.3.28.jar --patch-module java.xml.ws.annotation=${project.basedir}/target/java9/javax.annotation-api-1.2.jar ${camel.surefire.fork.vmargs} --add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=java.xml.ws --add-exports=java.xml.bind/org.jvnet.staxex.util=java.xml.ws</argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.10</version>
+            <executions>
+              <execution>
+                <id>copy</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jvnet.staxex</groupId>
+                      <artifactId>stax-ex</artifactId>
+                      <version>1.7.8</version>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.basedir}/target/java9</outputDirectory>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>javax.annotation</groupId>
+                      <artifactId>javax.annotation-api</artifactId>
+                      <version>1.2</version>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.basedir}/target/java9</outputDirectory>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>com.sun.xml.messaging.saaj</groupId>
+                      <artifactId>saaj-impl</artifactId>
+                      <version>1.3.28</version>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.basedir}/target/java9</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                  <overWriteReleases>false</overWriteReleases>
+                  <overWriteSnapshots>true</overWriteSnapshots>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
